--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ var/
 .installed.cfg
 *.egg
 
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -87,3 +88,10 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+
+#propio
+*.zip
+freefantasygui/*
+assets/images/gimp/*
+assets/images/gui/*
